--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<body background="images/TIM图片20190813100553.jpg" ;width="100%"; height="100%"; >
+<body> <img src="images/TIM图片20190813100553.jpg"  alt="1" /> </body>
