--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<body> <img src="images/TIM图片20190813100553.jpg"  alt="1" /> </body>
+<body> 
+  <img src="images/TIM图片20190813100553.jpg"  alt="1" width = "100%" />
+  <img src="images/TIM图片20190813100553.jpg"  alt="1" width = "100%"/>
+
+</body>
