--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body> 
-  <img src="images/TIM图片20190813100553.jpg"  alt="1" width = "100%" />
+ <div align="center"> <img src="images/TIM图片20190813100553.jpg"/> </div>
   <img src="images/TIM图片20190813100553.jpg"  alt="1" width = "100%"/>
 
 </body>
