--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <body> 
+ <div align="center"> <a href=" http://www.yahoo.com">客户端下载</a></div>
  <div align="center"> <img src="images/TIM图片20190813100553.jpg"/> </div>
-
 </body>
