--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- css -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="images/bootstrap.min.css">
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="css/pace.css">
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="images/pace.css">
+    <link rel="stylesheet" href="images/custom.css">
 
     <!-- js -->
     <script src="js/jquery-2.1.3.min.js"></script>
